--- a/devices/xiaomi.vacuum/audio_generator/language/audio_en.csv
+++ b/devices/xiaomi.vacuum/audio_generator/language/audio_en.csv
@@ -1,97 +1,96 @@
-back_dock_failed.wav,"Couldn't reach the charging dock, remove any obstacles, and clean the dock's transmission area."
-back_dock_nearby.wav,"Cannot reach the dock, please remove any obstacles!"
-bin_in.wav,"Dustbin installed."
-bin_out.wav,"Dustbin removed."
-binout_error10.wav,"Filter is clogged.  Remove the dustbin, and clean the filter!"
-bl_recovery_bootfailed.wav,"Failed to start.  Restoring factory settings.  This will take about 5 minutes."
-bl_recovery_failed.wav,"Failed to restore factory settings. Try again."
-bl_recovery_retry.wav,"Restoring factory settings.  This will take about 5 minutes."
-bl_recovery_start.wav,"Restoring factory settings.  This will take about 5 minutes."
-bl_recovery_updatefailed.wav,"Failed to update. Restoring factory settings.  This will take about 5 minutes."
-charging.wav,"Charging."
-clean_bin.wav,"Empty the dustbin."
-clean_finish.wav,"Finished cleaning. Going back to the dock."
-di.wav,"Ding dong!"
-ding.wav,"Ding!"
-error_internal.wav,"An internal error occurred. Reboot the system."
-error1.wav,"Error 1, Turn the laser unit, and check that it is not jammed, or blocked."
-error2.wav,"Error 2, Clean and lightly tap the bumper."
-error3.wav,"Error 3, Move the main unit to a new location, and restart."
-error4.wav,"Error 4, Clean cliff sensors. Move the main unit away from any drops, then restart."
-error5.wav,"Error 5, Remove and clean the main brush and brush bearing."
-error6.wav,"Error 6, Remove and clean the side brush."
-error7.wav,"Error 7, Check that wheels are not blocked, then move the main unit to a new location, and restart."
-error8.wav,"Error 8, Remove any obstacles around the main unit."
-error9.wav,"Error 9, Reinstall dustbin and filter."
-error10.wav,"Error 10, Check the filter.  If wet, use a dry one.  If dry, clean it, and try again."
-error11.wav,"Error 11, Strong magnetic field detected. Move the device away from barrier tape and restart."
-error12.wav,"Error 12, Battery level too low, recharge before use."
-error13.wav,"Error 13, Charging error.  Clean charging contacts, and try again."
-error14.wav,"Error 14, Battery error."
-error15.wav,"Error 15, Clean wall sensor."
-error16.wav,"Error 16, Place and start the main unit on a level floor."
-error17.wav,"Error 17, Side brush module error. Reset the main unit."
-error18.wav,"Error 18, Fan error. Reset the main unit."
-error19.wav,"Error 19, There is no current on the charging base. Check connection to a power supply."
-error21.wav,"Error 21, Height sensor has been pressed.  Move the main unit, and restart."
-error22.wav,"Error 22, Clean the recharge sensor on the main unit."
-error23.wav,"Error 23, Clean the transmission area on the charging dock."
-error24.wav,"Error 24, No-Go-Zone or barrier tape detected. Move the main unit away, and restart."
-findme.wav,"Hi! I'm over here!"
-finish.wav,"Cleaning completed."
-goto.wav,"Going to the target."
-goto_complete.wav,"Reached the target."
-goto_failed.wav,"Could not reach the target."
-home.wav,"Going back to the dock."
-map_restore.wav,"Map has been restored, starting to charge."
-no_power.wav,"Low battery, going back to the dock."
-no_power_charging.wav,"Low battery. More charging needed."
-no_spot_on_dock.wav,"Move the main unit to the target area, then start spot cleaning."
-pause.wav,"Paused."
-positioning.wav,"Positioning, please wait."
-power_off.wav,"Turning off."
-power_off_rejected.wav,"Take the main unit off the charging dock to turn off."
-power_resume_clean.wav,"Battery charged, resuming cleaning."
-relocate_failed.wav,"Route planning failed, could not reach the target."
-remote.wav,"Starting remote control."
-remote_complete.wav,"Remote control stopped."
-restart_backtodock_ignore_forbidden_zone.wav,"Position failed. The virtual wall of the No-Go-Zone is invalid. Continue recharging."
-restart_clean.wav,"Positioning failure, starting a new clean."
-restart_clean_fromdock.wav,"Positioning failure, starting a new clean to rebuild the map."
-restart_clean_ignore_forbidden_zone.wav,"Positioning failed. The virtual wall of the No-Go-Zone is invalid. Start a new cleaning session."
-restart_clean_nodock.wav,"Positioning failure, invalid map. Starting a new clean."
-restart_spot_ignore_forbidden_zone.wav,"Position failed. The virtual wall of the No-Go-Zone is invalid. Continuing spot cleaning."
-resume_backtodock.wav,"Positioning failure, invalid map. Continue returning to the dock."
-resume_clean.wav,"Resuming cleaning."
-resume_home.wav,"Continue returning to the dock."
-resume_room.wav,"Resuming room cleaning."
-resume_spot.wav,"Positioning failure, invalid map. Continuing spot cleaning."
-resume_zone.wav,"Resuming zoned cleaning."
-return_no.wav,"Couldn't return to the starting point."
-return_yes.wav,"Couldn't find the dock. Bring main unit closer to the dock, and retry."
-room.wav,"Starting room cleaning."
-room_complete.wav,"Room cleaning complete, going back to the dock."
-room_failed.wav,"Room cleaning incomplete, could not reach a specified room, going back to the dock."
-room_partialdone.wav,"Room cleaning complete, going back to the dock. Some areas could not be reached."
-saving_map.wav,"Saving map, please wait."
-spot.wav,"Starting spot cleaning."
-start.wav,"Starting to clean."
-stop.wav,"Finished cleaning."
-stop_clean.wav,"Stop cleaning."
-stop_goto.wav,"Stopping travel to target."
-stop_room.wav,"Stop targeted room cleaning."
-stop_scheduled_clean.wav,"Positioning failed. Scheduled cleaning cancelled."
-stop_spot.wav,"Stopped spot cleaning."
-stop_zone.wav,"Stopped targeted area cleaning."
-sysupd_complete.wav,"Update complete."
-sysupd_failed.wav,"Couldn't update firmware. Returning to previous version."
-sysupd_notready.wav,"Recharge to at least twenty percent before updating."
-sysupd_start.wav,"Updating firmware. This may take 5 to 10 minutes."
-sysupd_wip.wav,"Updating.  Please wait."
-timed_clean.wav,"Starting scheduled cleaning."
-wifi_reset.wav,"Resetting Wi-Fi."
-zone.wav,"Starting zoned cleanup."
-zone_complete.wav,"Zoned cleaning completed. Going back to the dock."
-zone_failed.wav,"Zoned cleaning incomplete.  Could not reach a specified zone. Going back to the dock."
-zone_partialdone.wav,"Zone cleaning completed. Going back to the dock. Some zones could not be reached."
-
+back_dock_failed.wav,"<speak>Couldn't reach the charging base, remove any obstacles, and clean the base's transmission area.</speak>"
+back_dock_nearby.wav,"<speak>Cannot reach the base, please remove any obstacles!</speak>"
+bin_in.wav,"<speak>Waste bin, installed.</speak>"
+bin_out.wav,"<speak>Waste bin, <emphasis level="moderate">removed.</emphasis></speak>"
+binout_error10.wav,"<speak>Filter is clogged.  Remove the waste bin, and clean the filter!</speak>"
+bl_recovery_bootfailed.wav,"<speak>Failed to start.  Restoring factory settings.  This will take about 5 minutes.</speak>"
+bl_recovery_failed.wav,"<speak>Failed to restore factory settings. Try again.</speak>"
+bl_recovery_retry.wav,"<speak>Restoring factory settings.  This will take about 5 minutes.</speak>"
+bl_recovery_start.wav,"<speak>Restoring factory settings.  This will take about 5 minutes.</speak>"
+bl_recovery_updatefailed.wav,"<speak>Failed to update. Restoring factory settings.  This will take about 5 minutes.</speak>"
+charging.wav,"<speak>Recharging <emphasis level="moderate">batteries.</emphasis></speak>"
+clean_bin.wav,"<speak>Empty the waste bin.</speak>"
+clean_finish.wav,"<speak>I have finished the cleaning task. Returning to <emphasis level="moderate">base.</emphasis></speak>"
+di.wav,"<speak>Ding dong!</speak>"
+ding.wav,"<speak>Ding!</speak>"
+error_internal.wav,"<speak>An internal error occurred. Reboot the system.</speak>"
+error1.wav,"<speak>Error 1, Turn the laser unit, and check that it is not jammed, or blocked.</speak>"
+error2.wav,"<speak>Error 2, Clean and lightly tap the bumper.</speak>"
+error3.wav,"<speak>Error 3, Move the vacuum to a new location, and restart.</speak>"
+error4.wav,"<speak>Error 4, Clean cliff sensors. Move the vacuum away from any drops, then restart.</speak>"
+error5.wav,"<speak>Error 5, Remove and clean the main brush and brush bearing.</speak>"
+error6.wav,"<speak>Error 6, Remove and clean the side brush.</speak>"
+error7.wav,"<speak>Error 7, Check that wheels are not blocked, then move the vacuum to a new location, and restart.</speak>"
+error8.wav,"<speak>Error 8, Remove any obstacles around the vacuum.</speak>"
+error9.wav,"<speak>Error 9, Reinstall waste bin and filter.</speak>"
+error10.wav,"<speak>Error 10, Check the filter.  If wet, use a dry one.  If dry, clean it, and try again.</speak>"
+error11.wav,"<speak>Error 11, Strong magnetic field detected. Move the device away from barrier tape and restart.</speak>"
+error12.wav,"<speak>Error 12, Battery level too low, recharge before use.</speak>"
+error13.wav,"<speak>Error 13, Charging error.  Clean charging contacts, and try again.</speak>"
+error14.wav,"<speak>Error 14, Battery error.</speak>"
+error15.wav,"<speak>Error 15, Clean wall sensor.</speak>"
+error16.wav,"<speak>Error 16, Place and start the vacuum on a level floor.</speak>"
+error17.wav,"<speak>Error 17, Side brush module error. Reset the vacuum.</speak>"
+error18.wav,"<speak>Error 18, Fan error. Reset the vacuum.</speak>"
+error19.wav,"<speak>Error 19, There is no current on the charging base. Check connection to a power supply.</speak>"
+error21.wav,"<speak>Error 21, Height sensor has been pressed.  Move the vacuum, and restart.</speak>"
+error22.wav,"<speak>Error 22, Clean the recharge sensor on the vacuum.</speak>"
+error23.wav,"<speak>Error 23, Clean the transmission area on the charging bas.</speak>"
+error24.wav,"<speak>Error 24, No-Go-Zone or barrier tape detected. Move the vacuum away, and restart.</speak>"
+findme.wav,"<speak>Greetings.  My name is Phil, and I am at your service.</speak>"
+finish.wav,"<speak>I have completed the cleaning task.</speak>"
+goto.wav,"<speak>Going to the target.</speak>"
+goto_complete.wav,"<speak><emphasis level="moderate">Reached</emphasis> the target.</speak>"
+goto_failed.wav,"<speak>Could not reach the target.</speak>"
+home.wav,"<speak>Returning to base.</speak>"
+map_restore.wav,"<speak>Map has been restored, starting to charge.</speak>"
+no_power.wav,"<speak>My batteries are <emphasis level="strong">quite</emphasis> low, returning to base.</speak></speak>"
+no_power_charging.wav,"<speak>My batteries are quite low. More charging needed.</speak>"
+no_spot_on_dock.wav,"<speak>Move the vacuum to the target area, then start spot cleaning.</speak>"
+pause.wav,"<speak>Paused.</speak>"
+positioning.wav,"<speak>Oh my. I seem to have wandered off. Attemping to reposition.</speak>"
+power_off.wav,"<speak>Turning off.</speak>"
+power_off_rejected.wav,"<speak>Take the vacuum off the charging base to turn off.</speak>"
+power_resume_clean.wav,"<speak>My batteries have been replenished, resuming cleaning.</speak>"
+relocate_failed.wav,"<speak>Route planning failed, could not reach the target.</speak>"
+remote.wav,"<speak>Accepting your remote commands</speak>"
+remote_complete.wav,"<speak>No longer accepting your remote commands.</speak>"
+restart_backtodock_ignore_forbidden_zone.wav,"<speak>Position failed. The virtual wall of the No-Go-Zone is invalid. Continue recharging.</speak>"
+restart_clean.wav,"<speak>Positioning failure, starting a new clean.</speak>"
+restart_clean_fromdock.wav,"<speak>Positioning failure, starting a new clean to rebuild the map.</speak>"
+restart_clean_ignore_forbidden_zone.wav,"<speak>Positioning failed. The virtual wall of the No-Go-Zone is invalid. Start a new cleaning session.</speak>"
+restart_clean_nodock.wav,"<speak>Positioning failure, invalid map. Starting a new clean.</speak>"
+restart_spot_ignore_forbidden_zone.wav,"<speak>Position failed. The virtual wall of the No-Go-Zone is invalid. Continuing spot cleaning.</speak>"
+resume_backtodock.wav,"<speak>Positioning failure, invalid map. I will attempt to return to base.</speak>"
+resume_clean.wav,"<speak>Resuming cleaning activities.</speak>"
+resume_home.wav,"<speak>Continuing my return to the <emphasis level="moderate">base.</emphasis></speak>"
+resume_room.wav,"<speak>Resuming room cleaning.</speak>"
+resume_spot.wav,"<speak>Positioning failure, invalid map. Continuing spot cleaning.</speak>"
+resume_zone.wav,"<speak>Resuming zoned cleaning.</speak>"
+return_no.wav,"<speak>Couldn't return to the starting point.</speak>"
+return_yes.wav,"<speak>Couldn't find the base. Bring vacuum closer to the base, and retry.</speak>"
+room.wav,"<speak>Starting room cleaning task.</speak>"
+room_complete.wav,"<speak>Room cleaning complete, returning, to <emphasis level="moderate">base.</emphasis></speak>"
+room_failed.wav,"<speak>Room cleaning incomplete, could not reach a specified room, returning to base.</speak>"
+room_partialdone.wav,"<speak>Room cleaning complete, returning to base. Some areas could not be reached.</speak>"
+saving_map.wav,"<speak>Saving map, please wait.</speak>"
+spot.wav,"<speak>Starting spot cleaning task.</speak>"
+start.wav,"<speak>Starting to <emphasis level="moderate">clean.</emphasis></speak>"
+stop.wav,"<speak>I have <emphasis level="strong">finished</emphasis> cleaning.</speak>"
+stop_clean.wav,"<speak>Stop cleaning.</speak>"
+stop_goto.wav,"<speak>Stopping travel to target.</speak>"
+stop_room.wav,"<speak>Stop targeted room cleaning.</speak>"
+stop_scheduled_clean.wav,"<speak>Positioning failed. Scheduled cleaning cancelled.</speak>"
+stop_spot.wav,"<speak>Stopped spot cleaning.</speak>"
+stop_zone.wav,"<speak>Stopped targeted area cleaning.</speak>"
+sysupd_complete.wav,"<speak>Update complete.</speak>"
+sysupd_failed.wav,"<speak>Couldn't update firmware. Returning to previous version.</speak>"
+sysupd_notready.wav,"<speak>Recharge to at least twenty percent before updating.</speak>"
+sysupd_start.wav,"<speak>Updating firmware. This may take 5 to 10 minutes.</speak>"
+sysupd_wip.wav,"<speak>Updating.  Please wait.</speak>"
+timed_clean.wav,"<speak>Starting scheduled cleaning activities.</speak>"
+wifi_reset.wav,"<speak>Resetting Wi-Fi.</speak>"
+zone.wav,"<speak>Starting a cleanup of the target zone.</speak>"
+zone_complete.wav,"<speak>Target zone cleaning completed. Returning to base.</speak>"
+zone_failed.wav,"<speak>Zoned cleaning incomplete.  Could not reach a specified target zone. returning to base.</speak>"
+zone_partialdone.wav,"<speak>Target zone cleaning completed. returning to base. Some zones could not be reached.</speak>"
