--- a/devices/xiaomi.vacuum/audio_generator/language/audio_en.csv
+++ b/devices/xiaomi.vacuum/audio_generator/language/audio_en.csv
@@ -38,7 +38,7 @@ error22.wav,"<speak>Error 22, Clean the recharge sensor on the vacuum.</speak>"
 error23.wav,"<speak>Error 23, Clean the transmission area on the charging bas.</speak>"
 error24.wav,"<speak>Error 24, No-Go-Zone or barrier tape detected. Move the vacuum away, and restart.</speak>"
 findme.wav,"<speak>Greetings.  My name is Phil, and I am at your service.</speak>"
-finish.wav,"<speak>I have completed the cleaning task.</speak>"
+finish.wav,"<speak>Greetings.  My name <emphasis level='strong'>is</emphasis> Phil, and I am at your service.</speak>"
 goto.wav,"<speak>Going to the target.</speak>"
 goto_complete.wav,"<speak><emphasis level='moderate'>Reached</emphasis> the target.</speak>"
 goto_failed.wav,"<speak>Could not reach the target.</speak>"
